--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -11,7 +11,7 @@
         <div class="card">
           <div class="card-body">
             <h5 class="card-title">Create Order</h5>
-            <form [formGroup]="form" autocomplete="off" (ngSubmit)="addToCart()"> <!--novalidate-->
+            <form [formGroup]="form" autocomplete="off" (ngSubmit)="addOrderItem()"> <!--novalidate-->
 
               <div class="form-group row">
                 <label for="order-id" class="col-sm-3 col-form-label">Order</label>
@@ -126,118 +126,56 @@
     </div>
     <div class="row mb-3">
       <div class="col">
-        <app-pure-table [provider]="itemsCart"></app-pure-table>
+        <app-pure-table [provider]="itemsOrder"></app-pure-table>
         <button class="button-xsmall pure-button float-right mt-3" (click)="saveOrder()">save</button>
       </div>
     </div>
     <div class="row justify-content-md-center mb-3">
       <h2>Orders</h2>
 
-      <table class="table table-bordered table-striped table-hover">
-        <thead class="thead-light">
+      <table class="pure-table pure-table-horizontal">
+      <thead>
         <tr>
-          <th scope="col" rowspan="2">#</th>
-          <th scope="col" rowspan="2">Customer</th>
-          <th scope="colgroup" colspan="6">Item</th>
-          <th scope="col" rowspan="2">Action</th>
+          <th rowspan="2">Order No#</th>
+          <th rowspan="2">Date</th>
+          <th rowspan="2">Customer</th>
+          <th colspan="2">Invoices</th>
+          <th colspan="7">Items</th>
         </tr>
-        <tr>
-          <th scope="col">id</th>
-          <th scope="col">price</th>
-          <th scope="col">shipping</th>
-          <th scope="col">qty</th>
-          <th scope="col">sku</th>
-          <th scope="col">seller</th>
+          <tr class="text-center">
+          <th>No#</th>
+          <th>Date</th>
+          <th>Seller</th>
+          <th>SKU</th>
+          <th>price</th>
+          <th>qty</th>
+          <th>total shipping</th>
+          <th>total price</th>
+          <th>total fee</th>
         </tr>
-        </thead>
+      </thead>
         <tbody>
-
-        <!-- Start Order row -->
-
-        <tr>
-          <th scope="rowgroup" rowspan="3">O1</th>
-          <td rowspan="3">CA</td>
-
-          <!--Start Order Item row-->
-
-          <th scope="row">O-I-1</th>
-          <td>100</td>
-          <td>20</td>
-          <td>3</td>
-          <td>SKU1</td>
-          <td>TA</td>
-          <!--End Order Item row-->
-
-          <td rowspan="3" class="text-center align-middle">
-            <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Order action">
-              <button type="button" class="btn btn-primary">Pay</button>
-              <button type="button" class="btn btn-danger">Cancel</button>
-            </div>
-          </td>
-        </tr>
-
-        <!--Start Order Item row-->
-
-        <tr>
-          <th scope="row">O-I-2</th>
-          <td>200</td>
-          <td>30</td>
-          <td>1</td>
-          <td>SKU2</td>
-          <td>TA</td>
-        </tr>
-        <!--End Order Item row-->
-
-        <!--Start Order Item row-->
-
-        <tr>
-          <th scope="row">O-I-3</th>
-          <td>400</td>
-          <td>10</td>
-          <td>2</td>
-          <td>SKU1</td>
-          <td>SAA</td>
-        </tr>
-        <!--End Order Item row-->
-        <!--End Order row-->
-
-        <!--Start Order row-->
-
-        <tr>
-          <th scope="rowgroup" rowspan="2">O1</th>
-          <td rowspan="2">CA</td>
-
-          <!--Start Order Item row-->
-
-          <th scope="row">O-I-1</th>
-          <td>100</td>
-          <td>20</td>
-          <td>3</td>
-          <td>SKU1</td>
-          <td>TA</td>
-          <!--End Order Item row-->
-
-          <td rowspan="2" class="text-center align-middle">
-            <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Order action">
-              <button type="button" class="btn btn-primary">Pay</button>
-              <button type="button" class="btn btn-danger">Cancel</button>
-            </div>
-          </td>
-        </tr>
-
-        <!--Start Order Item row-->
-
-        <tr>
-          <th scope="row">O-I-2</th>
-          <td>200</td>
-          <td>30</td>
-          <td>1</td>
-          <td>SKU2</td>
-          <td>TA</td>
-        </tr>
-        <!--End Order Item row-->
-        <!--End Order row-->
-
+          <tr *ngFor="let order of model.orders">
+            <td class="text-center align-middle">
+              <span>{{order.id}}</span>
+              <div class="btn-group-vertical btn-group-sm" role="group" aria-label="Order action">
+                <button type="button" class="btn btn-primary" disabled>Pay</button>
+                <button type="button" class="btn btn-danger" disabled>Cancel</button>
+              </div>
+            </td>
+            <td>{{order.createdAt}}</td>
+            <td>{{order.customerName}}</td>
+            <td colspan="2"></td>
+            <td colspan="7">
+              <app-pure-table
+                [showHeader]="false"
+                [showFooter]="false"
+                [provider]="createItemsOrderProvider(order.items)"></app-pure-table>-
+            </td>
+          </tr>
+          <tr *ngIf="model.orders.length === 0">
+            <td colspan="12">empty</td>
+          </tr>
         </tbody>
       </table>
     </div>
