Example NODAL menu data/tables

--- a/src/app/page/nodal/nodal.component.html
+++ b/src/app/page/nodal/nodal.component.html
@@ -1,1 +1,48 @@
-<p>nodal works!</p>
+<p>nodal not works!</p>
+
+<h2>Nodal Bank account balance (1): 563.70 INR</h2>
+<table>
+  <thead>
+  <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
+  </thead>
+  <tbody>
+  <tr>  <td>ST_GW_1</td><td>18.08.19 00:30</td><td> +563.70 INR </td> <td>563.70 INR</td> </tr>
+  <tr>  <td>ST_MER_1</td><td>-</td><td> -93 INR </td> <td> xxx</td> </tr>
+  </tbody>
+</table>
+
+<h2>Nodal GW Fee account balance (1): 6.80 INR</h2>
+<table>
+  <thead>
+  <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
+  </thead>
+  <tbody>
+  <tr>  <td>ST_GW_1</td><td>18.08.19 00:30</td><td> +6.80 INR </td> <td>6.80 INR</td> </tr>
+  </tbody>
+</table>
+
+
+<h2>Nodal MF Fee account balance (1): 7 INR</h2>
+<table>
+  <thead>
+  <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
+  </thead>
+  <tbody>
+  <tr>  <td>INV1</td><td>18.08.19 00:30</td><td> +7 INR </td> <td>7 INR</td> </tr>
+  </tbody>
+</table>
+
+<button>SETTLEMENT TO MERCHANT</button>
+<br/> <hr/>
+TABS:
+<h3>Nodal Seller TA account balance (1): 93 INR</h3>
+<table>
+  <thead>
+  <tr><th>REF</th><th>DATE</th><th>Amount</th><th>Balance</th></tr>
+  </thead>
+  <tbody>
+  <tr>  <td>INV1</td><td>-</td><td> +93 </td> <td> 93</td> </tr>
+  <tr>  <td>ST_MER_1</td><td>-</td><td> -93 </td> <td> 0</td> </tr>
+  </tbody>
+</table>
+<!-- TBD todo should be tabs with all Sellers balances/tables -->
