--- a/src/app/ui/table/pure-table/pure-table.component.html
+++ b/src/app/ui/table/pure-table/pure-table.component.html
@@ -1,4 +1,4 @@
-<table class="pure-table pure-table-horizontal">
+<table class="pure-table pure-table-horizontal text-center">
   <thead *ngIf="showHeader">
       <tr>
           <th *ngFor="let header of provider.headers">{{header}}</th>
