--- a/src/app/ui/menu/menu.component.html
+++ b/src/app/ui/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="home-menu pure-menu pure-menu-horizontal pure-menu-fixed">
-  <a class="pure-menu-heading" routerLink="{{meta.releaseNumber}}">{{heading}} {{meta.releaseNumber}}</a>
+  <a class="pure-menu-heading" routerLink="/">{{heading}} {{meta.releaseNumber}}</a>
   <ul class="pure-menu-list">
     <li class="pure-menu-item"
         [class.pure-menu-selected]="router.isActive(item.path, true)"
