--- a/src/app/ui/dialog/order-create/order-create.component.html
+++ b/src/app/ui/dialog/order-create/order-create.component.html
@@ -113,7 +113,7 @@
     </div>
     <div class="row mb-3">
       <div class="col">
-        <app-order-items-table [data]="model.currentOrder.items"></app-order-items-table>
+        <app-order-items-table [data]="model.currentOrder"></app-order-items-table>
       </div>
     </div>
   </div>
