[BOODMO-16925] fix create order modal

--- a/src/app/page/orders/orders.component.html
+++ b/src/app/page/orders/orders.component.html
@@ -5,10 +5,11 @@
 -->
 <div class="content">
   <div class="container-fluid">
-    <div class="row justify-content-md-center mb-3">
+    <div class="row justify-content-between mb-3">
       <h2>Orders</h2>
       <app-dialog-order-create></app-dialog-order-create>
-
+    </div>
+    <div class="row justify-content-md-center mb-3">
       <table class="pure-table pure-table-horizontal">
       <thead>
         <tr>
